force-app/main/default/objects/Task__c/fields/Independent_Task__c.field-meta.xml
<CustomField>
    <fullName>Independent_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Independent Task</label>
    <type>Checkbox</type>
</CustomField>